# artifact-generator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benches/: watcher.rs
python/: massive.py  ollama_stream.py  pyproject.toml  stream.py
python/benchmarks/: hf_stream.py  run.py
python/src/artifact_generator/assets/: __init__.py
python/src/artifact_generator/scripts/: realtime.py
src/: lib.rs  main.rs  telemetry.rs
tools/: pyproject.toml
tools/src/artifact_generator/: __init__.py
tools/src/artifact_generator/benchmarks/: hf_stream.py  run.py
tools/src/artifact_generator/scripts/: demo.py
