[package]
name = "artifact-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artifact-generator"
path = "src/main.rs"

[dependencies]
axum          = "0.8"
tokio         = { version = "1", features = ["full"] }
tower-http    = { version = "0.6", features = ["cors"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
serde_json    = "1"
anyhow        = "1"
