[package]
name = "artifact-generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "artifact_generator"
path = "src/lib.rs"

[[bin]]
name = "artifact-generator"
path = "src/main.rs"

[dependencies]
headless_chrome = "1"
tokio         = { version = "1", features = ["full"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
anyhow        = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "watcher"
harness = false
