[project]
name = "artifact-generator"
version = "0.1.0"
description = "Benchmark and validation scripts for artifact-generator"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "tiktoken>=0.7",
    "tokenizers>=0.21",
]

[project.scripts]
ag-demo = "artifact_generator.scripts.demo:main"
ag-ollama = "artifact_generator.scripts.ollama_stream:main"
ag-stream = "artifact_generator.scripts.stream:main"
ag-bench = "artifact_generator.benchmarks.run:main"
ag-hf-stream = "artifact_generator.benchmarks.hf_stream:main"
ag-realtime = "artifact_generator.scripts.realtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
